--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,1 +1,10 @@
-events#index page
+
+<p>
+<%= link_to 'New Event', new_event_path %>
+</p>
+<% @events.each do |current_event| %>
+  <%= render 'single_event', event: current_event %>
+  <%= link_to 'Edit', edit_event_path(current_event.id) %> |
+  <%= link_to 'Delete', event_path(@event), method: :destroy, data: {confirm: "Are you sure you want to delete the event '#{@event.name}'? This cannot be undone!"} %>
+
+<% end %>
